Prepare dataset and try different models for training and prediction. First try.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,18 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "\n",
+    "from utils import save_submission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +217,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +227,246 @@
     "data=pd.read_csv('dataset/house-prices/train.csv')\n",
     "test=pd.read_csv('dataset/house-prices/test.csv')\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NA_list=['Alley', 'Fence', 'FireplaceQu', 'GarageType','GarageCond','GarageQual','GarageFinish','BsmtFinType2',\n",
+    "         'BsmtExposure','BsmtQual','BsmtCond','BsmtFinType1','MasVnrType']\n",
+    "data[NA_list]=data[NA_list].fillna('na')\n",
+    "test[NA_list]=test[NA_list].fillna('na')\n",
+    "\n",
+    "ind=data[data['Electrical'].isnull()==True].index\n",
+    "data.loc[ind,'Electrical']=data['Electrical'].value_counts().keys()[0]\n",
+    "test.loc[ind,'Electrical']=test['Electrical'].value_counts().keys()[0]\n",
+    "\n",
+    "data['LotFrontage']=data['LotFrontage'].fillna(0)\n",
+    "test['LotFrontage']=test['LotFrontage'].fillna(0)\n",
+    "\n",
+    "ind_train=data[['MasVnrArea','MasVnrType','SalePrice']][data['MasVnrArea'].isnull()==True].index\n",
+    "data.loc[ind_train,'MasVnrArea']=0\n",
+    "\n",
+    "ind_test=test[['MasVnrArea','MasVnrType']][test['MasVnrArea'].isnull()==True].index\n",
+    "test.loc[ind_test,'MasVnrArea']=0\n",
+    "\n",
+    "cols = ('FireplaceQu', 'BsmtQual', 'BsmtCond', 'Utilities', 'GarageQual', 'GarageCond', \n",
+    "        'ExterQual', 'ExterCond','HeatingQC', 'PoolQC', 'KitchenQual', 'BsmtFinType1', \n",
+    "        'BsmtFinType2', 'Functional', 'Fence', 'BsmtExposure', 'GarageFinish', 'LandSlope',\n",
+    "        'LotShape', 'PavedDrive', 'Street', 'Alley', 'CentralAir', 'MSSubClass', 'OverallCond', \n",
+    "        'YrSold', 'MoSold', 'MSZoning', 'LandContour', 'LotConfig', 'Neighborhood',\n",
+    "        'Condition1', 'Condition2', 'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl', 'Exterior1st',\n",
+    "        'Exterior2nd', 'MasVnrType', 'MasVnrArea', 'Foundation', 'GarageType', 'MiscFeature', \n",
+    "        'SaleType', 'SaleCondition', 'Electrical', 'Heating')\n",
+    "\n",
+    "def encode_labels(dataset, cols):\n",
+    "    for c in cols:\n",
+    "        lbl = LabelEncoder() \n",
+    "        lbl.fit(list(dataset[c].values)) \n",
+    "        dataset[c] = lbl.transform(list(dataset[c].values))\n",
+    "    return dataset\n",
+    "\n",
+    "data = encode_labels(data, cols)\n",
+    "test = encode_labels(test, cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GarageYrBlt    81\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking 'NA' in train dataset\n",
+    "features_na=data.isnull().sum().sort_values(ascending=False)\n",
+    "features_na[features_na>0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GarageYrBlt     78\n",
+       "BsmtFullBath     2\n",
+       "BsmtHalfBath     2\n",
+       "BsmtFinSF2       1\n",
+       "BsmtUnfSF        1\n",
+       "TotalBsmtSF      1\n",
+       "BsmtFinSF1       1\n",
+       "GarageCars       1\n",
+       "GarageArea       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_na=test.isnull().sum().sort_values(ascending=False)\n",
+    "features_na[features_na>0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in ['GarageYrBlt']:\n",
+    "    data.loc[data[data[i].isnull()==True].index,i]=data[i].value_counts().keys()[0]\n",
+    "    \n",
+    "for i in ['GarageYrBlt', 'BsmtFullBath', 'BsmtHalfBath', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'BsmtFinSF1', 'GarageCars', 'GarageArea']:\n",
+    "    test.loc[test[test[i].isnull()==True].index,i]=test[i].value_counts().keys()[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepraring data for prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Take targate variable into y\n",
+    "y = data['SalePrice'].values\n",
+    "X = data.loc[:, data.columns != 'SalePrice'].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build model and predict house prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy --> 76.49035969927989%\n"
+     ]
+    }
+   ],
+   "source": [
+    "ETR = ExtraTreesRegressor(n_estimators=100, max_depth=4)\n",
+    "ETR.fit(X[:1000], y[:1000])\n",
+    "# ETR.fit(X, y)\n",
+    "print(f\"Accuracy --> {ETR.score(X[1000:], y[1000:])*100}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy --> 78.37489194572147%\n"
+     ]
+    }
+   ],
+   "source": [
+    "RFR = RandomForestRegressor(random_state=1, n_estimators=10, max_depth = 4)\n",
+    "RFR.fit(X[:1000], y[:1000])\n",
+    "# RFR.fit(X, y)\n",
+    "print(f\"Accuracy --> {RFR.score(X[1000:], y[1000:])*100}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy --> 86.84070126017602%\n"
+     ]
+    }
+   ],
+   "source": [
+    "GBR = GradientBoostingRegressor(n_estimators=100, max_depth=4)\n",
+    "GBR.fit(X[:1000], y[:1000])\n",
+    "# GBR.fit(X, y)\n",
+    "print(f\"Accuracy --> {GBR.score(X[1000:], y[1000:])*100}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict house prices on test dataset, send submission to kaggle.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = test.values\n",
+    "GBR.fit(X, y)\n",
+    "y_predicted = GBR.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'submissions/submission-20190610-020741.csv'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "save_submission(test.Id, y_predicted)"
    ]
   },
   {
